EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef uint32_t id_t;
typedef struct
{
    int    id;              
    int    model_id;        
    int    ctrl_type;       
    double timestamp;       
    double x;               
    double y;               
    double z;               
    double h;               
    double p;               
    double r;               
    id_t   roadId;          
    id_t   junctionId;      
    double t;               
    int    laneId;          
    double laneOffset;      
    double s;               
    double speed;           
    double centerOffsetX;   
    double centerOffsetY;   
    double centerOffsetZ;   
    double width;           
    double length;          
    double height;          
    int    objectType;      
    int    objectCategory;  
    double wheel_angle;     
    double wheel_rot;       
    int    visibilityMask;  
} SE_ScenarioObjectState;
typedef struct
{
    SE_OverrideActionStatusPedals   throttle;       
    SE_OverrideActionStatusBrake    brake;          
    SE_OverrideActionStatusPedals   clutch;         
    SE_OverrideActionStatusBrake    parkingBrake;   
    SE_OverrideActionStatusSteering steeringWheel;  
    SE_OverrideActionStatusGear     gear;           
} SE_OverrideActionList;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    
    int            pixelFormat;  
    unsigned char *data;
} SE_Image;  
typedef struct
{
    SE_Center     center_;      
    SE_Dimensions dimensions_;  
} SE_OSCBoundingBox;
typedef enum
{
    SE_SET    = 1,  
    SE_UPDATE = 2   
} SE_PositionModeType;
typedef enum
{
    DEFAULT     = 0,
    API         = 1,
    API_AND_LOG = 2
} SE_OSIStaticReportMode;  
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    SE_DLL_API int SE_StepDT(double dt);
    SE_DLL_API int SE_Step();
    SE_DLL_API void SE_Close();
    SE_DLL_API void SE_LogToConsole(bool mode);
    SE_DLL_API void SE_CollisionDetection(bool mode);
    SE_DLL_API double SE_GetSimulationTime();
    SE_DLL_API double SE_GetSimTimeStep();
    SE_DLL_API int SE_SetVariableString(const char *variableName, const char *value);
    SE_DLL_API int SE_SetVariableBool(const char *variableName, bool value);
    SE_DLL_API void *SE_GetODRManager();
    SE_DLL_API void SE_SetObjectPositionMode(int object_id, SE_PositionModeType type, int mode);
    SE_DLL_API void SE_SetObjectPositionModeDefault(int object_id, SE_PositionModeType type);
    SE_DLL_API int SE_AddObject(const char *object_name, int object_type, int object_category, int object_role, int model_id, const char *model_3d);
    SE_DLL_API int SE_AddObjectWithBoundingBox(const char       *object_name,
                                               int               object_type,
                                               int               object_category,
                                               int               object_role,
                                               int               model_id,
                                               const char       *model_3d,
                                               SE_OSCBoundingBox bounding_box,
                                               int               scale_mode);
    SE_DLL_API int SE_DeleteObject(int object_id);
    SE_DLL_API int SE_ReportObjectPos(int object_id, double x, double y, double z, double h, double p, double r);
    SE_DLL_API int SE_ReportObjectPosMode(int object_id, double x, double y, double z, double h, double p, double r, int mode);
    SE_DLL_API int SE_ReportObjectPosXYH(int object_id, double x, double y, double h);
    SE_DLL_API int SE_ReportObjectRoadPos(int object_id, id_t roadId, int laneId, double laneOffset, double s);
    SE_DLL_API int SE_ReportObjectSpeed(int object_id, double speed);
    SE_DLL_API int SE_ReportObjectLateralPosition(int object_id, double t);
    SE_DLL_API int SE_ReportObjectLateralLanePosition(int object_id, int laneId, double laneOffset);
    SE_DLL_API int SE_ReportObjectVel(int object_id, double x_vel, double y_vel, double z_vel);
    SE_DLL_API int SE_ReportObjectAngularVel(int object_id, double h_rate, double p_rate, double r_rate);
    SE_DLL_API int SE_ReportObjectAcc(int object_id, double x_acc, double y_acc, double z_acc);
    SE_DLL_API int SE_ReportObjectAngularAcc(int object_id, double h_acc, double p_acc, double r_acc);
    SE_DLL_API int SE_ReportObjectWheelStatus(int object_id, double rotation, double angle);
    SE_DLL_API int SE_SetSnapLaneTypes(int object_id, int laneTypes);
    SE_DLL_API int SE_SetLockOnLane(int object_id, bool mode);
    SE_DLL_API int SE_GetNumberOfObjects();
    SE_DLL_API int SE_GetId(int index);
    SE_DLL_API int SE_GetIdByName(const char *name);
    SE_DLL_API int SE_GetObjectState(int object_id, SE_ScenarioObjectState *state);
    SE_DLL_API int SE_GetObjectRouteStatus(int object_id);
    SE_DLL_API int SE_GetObjectInLaneType(int object_id);
    SE_DLL_API int SE_GetOverrideActionStatus(int object_id, SE_OverrideActionList *list);
    SE_DLL_API const char *SE_GetObjectTypeName(int object_id);
    SE_DLL_API const char *SE_GetObjectName(int object_id);
    SE_DLL_API const char *SE_GetObjectModelFileName(int object_id);
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    SE_DLL_API int SE_OpenOSISocket(const char *ipaddr);
    SE_DLL_API void SE_SetOSIStaticReportMode(SE_OSIStaticReportMode mode);
    SE_DLL_API const char *SE_GetOSIGroundTruth(int *size);
    SE_DLL_API const char *SE_GetOSIGroundTruthRaw();
    SE_DLL_API const char *SE_GetOSITrafficCommandRaw();
    SE_DLL_API int SE_SetOSISensorDataRaw(const char *sensordata);
    SE_DLL_API const char *SE_GetOSIRoadLane(int *size, int object_id);
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);