EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs


        /// <summary>
        /// Sets a variable value as a string.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetVariableString(string variableName, string value);

        /// <summary>
        /// Sets a variable value as a boolean.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetVariableBool(string variableName, [MarshalAs(UnmanagedType.I1)] bool value);

        /// <summary>
        /// Gets the pointer to the OpenDRIVE manager.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetODRManager();

        /// <summary>
        /// Closes the scenario engine and releases resources.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_Close();

        /// <summary>
        /// Enables or disables logging to the console (stdout).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_LogToConsole([MarshalAs(UnmanagedType.I1)] bool mode);

        /// <summary>
        /// Enables or disables collision detection.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_CollisionDetection([MarshalAs(UnmanagedType.I1)] bool mode);

        /// <summary>
        /// Steps the simulation by one frame (using the default or previously set timestep).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_Step();

        /// <summary>
        /// Steps the simulation by a specific time delta.
        /// </summary>
        /// <param name="dt">The time step in seconds.</param>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_StepDT(double dt);

        /// <summary>
        /// Gets the current simulation time.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern double SE_GetSimulationTime();

        /// <summary>
        /// Gets the current simulation time step.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern double SE_GetSimTimeStep();

        /// <summary>
        /// Sets the position mode for an object (e.g., relative to road, global coordinates).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetObjectPositionMode(int object_id, int type, int mode);

        /// <summary>
        /// Sets the default position mode for an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetObjectPositionModeDefault(int object_id, int type);

        /// <summary>
        /// Adds a new object to the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddObject(string object_name, int object_type, int object_category, int object_role, int model_id, string model_3d);

        /// <summary>
        /// Adds a new object with a specific bounding box.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddObjectWithBoundingBox(string object_name, int object_type, int object_category, int object_role, int model_id, string model_3d, OSCBoundingBox bounding_box, int scale_mode);

        /// <summary>
        /// Deletes an object from the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_DeleteObject(int object_id);

        /// <summary>
        /// Reports (updates) the position and rotation of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectPos(int object_id, double x, double y, double z, double h, double p, double r);

        /// <summary>
        /// Reports the position of an object with a specific mode.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectPosMode(int object_id, double x, double y, double z, double h, double p, double r, int mode);

        /// <summary>
        /// Reports the position (X, Y) and heading (H) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectPosXYH(int object_id, double x, double y, double h);

        /// <summary>
        /// Reports the position of an object relative to the road network (RoadId, LaneId, S, Offset).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectRoadPos(int object_id, int roadId, int laneId, double laneOffset, double s);

        /// <summary>
        /// Reports the speed of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectSpeed(int object_id, double speed);

        /// <summary>
        /// Reports the lateral position (t-coordinate) of an object on the current road.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectLateralPosition(int object_id, double t);

        /// <summary>
        /// Reports the lateral position of an object relative to a specific lane.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectLateralLanePosition(int object_id, int laneId, double laneOffset);

        /// <summary>
        /// Reports the velocity vector of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectVel(int object_id, double x_vel, double y_vel, double z_vel);

        /// <summary>
        /// Reports the angular velocity of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectAngularVel(int object_id, double h_rate, double p_rate, double r_rate);

        /// <summary>
        /// Reports the acceleration vector of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectAcc(int object_id, double x_acc, double y_acc, double z_acc);

        /// <summary>
        /// Reports the angular acceleration of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectAngularAcc(int object_id, double h_acc, double p_acc, double r_acc);

        /// <summary>
        /// Reports the wheel status (rotation and steering angle) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ReportObjectWheelStatus(int object_id, double rotation, double angle);

        /// <summary>
        /// Sets the lane types that an object should snap to.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetSnapLaneTypes(int object_id, int laneTypes);

        /// <summary>
        /// Enables or disables locking an object to its current lane.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetLockOnLane(int object_id, [MarshalAs(UnmanagedType.I1)] bool mode);

        /// <summary>
        /// Gets the total number of objects in the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfObjects();

        /// <summary>
        /// Gets the ID of an object by its index.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetId(int index);

        /// <summary>
        /// Gets the ID of an object by its name.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetIdByName(string name);

        /// <summary>
        /// Retrieves the full state of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectState(int object_id, ref ScenarioObjectState state);

        /// <summary>
        /// Gets the route status of an object (e.g., on route, off route).
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectRouteStatus(int object_id);

        /// <summary>
        /// Gets the type of lane the object is currently in.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectInLaneType(int object_id);

        /// <summary>
        /// Gets the status of override actions (e.g., throttle, brake override) for an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetOverrideActionStatus(int objectId, ref OverrideActionList list);

        /// <summary>
        /// Gets the type name of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetObjectTypeName(int object_id);

        /// <summary>
        /// Gets the name of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetObjectName(int object_id);

        /// <summary>
        /// Gets the 3D model filename associated with an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetObjectModelFileName(int object_id);

        /// <summary>
        /// Opens a socket for sending OSI data.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_OpenOSISocket(string ipaddr);

        /// <summary>
        /// Sets the mode for OSI static data reporting.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_SetOSIStaticReportMode(int mode);

        /// <summary>
        /// Gets the OSI GroundTruth data.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSIGroundTruth(ref int size);

        /// <summary>
        /// Gets the raw OSI GroundTruth data pointer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSIGroundTruthRaw();

        /// <summary>
        /// Gets the raw OSI TrafficCommand data pointer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSITrafficCommandRaw();

        /// <summary>
        /// Sets raw OSI SensorData.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOSISensorDataRaw(string sensordata);

        /// <summary>
        /// Gets OSI lane data for a specific object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSIRoadLane(ref int size, int object_id);
